objects/kugo2p__FavoriteMember__c.object
<CustomObject>
    <description>Kugamon - Related Object to Favorites to that underlying Favorite details, such as Account Name, Product Name, Group Name.</description>
    <fields>
        <fullName>kugo2p__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Favorite Members</relationshipLabel>
        <relationshipName>Favorite_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Favorite__c</fullName>
        <label>Favorite</label>
        <referenceTo>kugo2p__Favorite__c</referenceTo>
        <relationshipLabel>Favorite Members</relationshipLabel>
        <relationshipName>Favorite_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Favorite Members</relationshipLabel>
        <relationshipName>Favorite_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Favorite Member</label>
    <nameField>
        <displayFormat>FM-{000000}</displayFormat>
        <label>Favorite Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorite Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>